<resources>
    <string name="app_name">Prototype</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="create_account_sign_up_here">Create Account. Sign Up Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="login_text">Log in here</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_page">Home Page</string>
    <string name="inventory">Inventory</string>
    <string name="Inventory">inventory</string>
    <string name="my_items">My Items</string>
    <string name="My_items">my_items</string>
    <string name="orders">Orders</string>
    <string name="suppliers">Suppliers</string>
    <string name="Suppliers">suppliers</string>
    <string name="purchases">Purchases</string>
    <string name="reports">Reports</string>

    <string-array name="order_status_array">
        <item>Pending</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Cancelled</item>
    </string-array>
</resources>